--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -2,4 +2,50 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  align-items: flex-start;
+  padding-top: 33px;
+  font-size: 14px;
+  /* position: fixed;
+  top: 0;
+  right: 0;
+  left: 0; */
+  /* height: 175px;
+  background-color: black; */
+}
+.main-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 55%;
+}
+nav > a,
+.main-links > a {
+  /* color: white; */
+  text-decoration: none;
+  padding: 5px;
+}
+nav > .logo {
+  margin-right: 120px;
+  margin-left: 20px;
+}
+.account-btn {
+  /* background-color: black; */
+  /* color: white; */
+  font-size: 14px;
+}
+.active {
+  padding: 5px;
+  border-bottom: 2px solid white;
+}
+
+nav > button {
+  height: 45px;
+  margin-top: -10px;
+  width: 80px;
+  border-radius: 40px;
+  font-size: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border: black;
 }
