--- a/frontend/src/components/SpotsCard/SpotCard.css
+++ b/frontend/src/components/SpotsCard/SpotCard.css
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   font-weight: 300;
+  /* z-index: -100; */
 }
 .spot-card > a {
   display: flex;
@@ -18,8 +19,11 @@
 }
 
 .spot-card > a > img {
-  max-width: 300px;
-  max-height: 200px;
+  width: 300px;
+  /* min-width: 300px; */
+  height: 200px;
+  /* min-height: 200px; */
+  object-fit: cover;
   border-radius: 15px;
 }
 .info {
@@ -44,4 +48,10 @@
   display: flex;
   position: relative;
   top: 35px;
+}
+
+.spots-container {
+  position: relative;
+  top: 180px;
+  margin-bottom: 160px;
 }
