--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,7 +5,7 @@ nav {
   align-items: flex-start;
   padding-top: 33px;
   font-size: 14px;
-  position: fixed;
+  position: sticky;
   top: 0;
   right: 0;
   left: 0;
