--- a/frontend/src/components/Pages/Landing/Landing.css
+++ b/frontend/src/components/Pages/Landing/Landing.css
@@ -2,7 +2,7 @@
   width: 100%;
   background: linear-gradient(rgb(0, 0, 0), rgb(74, 11, 92));
   height: 1000px;
-  margin-top: 160px;
+  margin-top: 0px;
   display: flex;
   justify-content: center;
 }
@@ -124,9 +124,13 @@
 .name {
   font-size: 30px;
   color: white;
+  text-decoration: none;
 }
 
 .distance {
   font-size: 18px;
   color: white;
+}
+a {
+  text-decoration: none;
 }
