--- a/frontend/src/components/Pages/Landing/Landing.css
+++ b/frontend/src/components/Pages/Landing/Landing.css
@@ -1,8 +1,13 @@
 .main-image-container {
   width: 100%;
-  background: linear-gradient(rgb(0, 0, 0), rgb(74, 11, 92));
+  background: linear-gradient(
+    rgb(0, 0, 0),
+    rgb(74, 11, 92),
+    rgb(180, 89, 230),
+    rgb(255, 255, 255) 100%
+  );
   height: 1000px;
-  margin-top: 0px;
+  padding-top: 10px;
   display: flex;
   justify-content: center;
 }
