--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 #modal-background {
@@ -19,7 +20,8 @@
 }
 
 #modal-content {
-  position: absolute;
+  position: relative;
+  top: 30px;
   background-color: white;
   border-radius: 15px;
 }
