--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,39 +1,58 @@
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-items: flex-start;
-  padding-top: 33px;
-  font-size: 14px;
+.nav {
   position: sticky;
   top: 0;
   right: 0;
   left: 0;
-  height: 175px;
-  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #161712;
+  z-index: 300;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* align-items: flex-start; */
+  padding-top: 33px;
+  margin-bottom: 40px;
+  font-size: 14px;
+  /* position: sticky; */
+  max-width: 3000px;
+  /* top: 0;
+  right: 0;
+  left: 0; */
+  /* height: 175px; */
+  background-color: #161712;
   z-index: 1;
 }
 .main-links {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-
+  justify-content: center;
   width: 400px;
+  margin-right: 60px;
 }
 nav > a,
-.main-links > a {
-  color: white;
+.main-links > a,
+nav > span {
+  color: #e5e7e6;
   text-decoration: none;
   padding: 5px;
+  margin: 0px 30px;
+  font-size: 16px;
 }
-nav > .logo {
-  margin-right: 120px;
-  margin-left: 20px;
+nav > a:hover,
+.main-links > a:hover {
+  color: white;
+  font-weight: bolder;
 }
 .nav-btn {
   display: flex;
   flex-direction: row;
-  background-color: rgb(190, 190, 190);
+  background-color: #e5e7e6;
   border-radius: 40px;
   height: 45px;
   width: 160px;
@@ -44,21 +63,22 @@ nav > .logo {
   height: 45px;
   width: 80px;
   border-radius: 40px;
-  background-color: rgb(190, 190, 190);
+  background-color: #e5e7e6;
   border: none;
 }
 .nav-btn > button:hover {
-  background-color: rgb(235, 235, 235);
-  box-shadow: rgb(0 0 0 / 15%) 0px 16px 32px, rgb(0 0 0 / 10%) 0px 3px 8px !important;
+  background-color: #b7b5b3;
+  box-shadow: rgb(0 0 0 / 15%) 0px 0px 32px, rgb(0 0 0 / 10%) 0px 3px 8px !important;
 }
 .active {
-  padding: 5px;
+  color: white;
+  padding-bottom: 5px;
   border-bottom: 2px solid white;
 }
 
 nav > button {
   height: 45px;
-  margin-top: -10px;
+  /* margin-top: 10px; */
   width: 80px;
 
   border-radius: 40px;
@@ -66,19 +86,20 @@ nav > button {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  border: black;
+  border: #161712;
 }
 
-.search {
-  position: fixed;
-  top: 80px;
-  left: 13%;
+/* .search {
+  /* position: relative;
+  top: 20px;
+  left: -23%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 8px;
   width: 700px;
   height: 64px;
+  margin-bottom: 10px;
   border-radius: 40px;
   background-color: #fff;
   z-index: 2;
@@ -109,4 +130,32 @@ nav > button {
 
 .search-icon:hover {
   background-color: rgb(76, 63, 145);
+} */
+
+.account-btn {
+  height: 45px;
+  width: 80px;
+  border-radius: 40px;
+  color: #000;
+  font-weight: bolder;
+  background-color: #e5e7e6;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.account-btn:hover {
+  background-color: #b7b5b3;
+  color: #000;
+  box-shadow: rgb(0 0 0 / 15%) 0px 16px 32px, rgb(0 0 0 / 10%) 0px 3px 8px !important;
+}
+
+.logo-container {
+  width: 50px;
+  height: 50px;
+  margin-top: -10px;
+  margin-left: 40px;
+}
+.logo-container > a:active {
+  text-decoration: none;
 }
