--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,5 +8,6 @@
 #root {
   position: relative;
   min-height: 100vh;
-  padding-bottom: 100px;
+  padding-bottom: 180px;
+  background-color: #e5e7e6;
 }
