--- a/frontend/src/components/SignupModal/SignupForm.css
+++ b/frontend/src/components/SignupModal/SignupForm.css
@@ -11,10 +11,13 @@
 }
 
 .fa-times {
-  color: #717171;
-  margin: 30px;
+  color: #ed474a;
+  margin: 26px;
+  font-size: 20px;
 }
-
+.fa-times:hover {
+  color: #a71113;
+}
 .header > span {
   position: relative;
   left: 35%;
@@ -28,7 +31,7 @@
   align-items: center;
 }
 .signup-inputs {
-  border: 1px solid rgb(190, 190, 190);
+  border: 1px solid #b7b5b3;
   border-radius: 8px;
   margin-top: 20px;
   margin-bottom: 40px;
@@ -37,7 +40,7 @@
   width: 520px;
   height: 50px;
   border-width: 0;
-  border-bottom: 1px solid rgb(190, 190, 190);
+  border-bottom: 1px solid #b7b5b3;
   padding: 10px;
   font-size: 15px;
 }
@@ -67,5 +70,5 @@ form button {
   border-radius: 10px;
   font-size: 16px;
   color: white;
-  background-color: rgb(76, 63, 145);
+  background-color: #453f78;
 }
