--- a/frontend/src/components/Account/AddPlaceForm.css
+++ b/frontend/src/components/Account/AddPlaceForm.css
@@ -1,8 +1,9 @@
 .add-place-modal {
   height: fit-content;
-  max-height: 90vh;
+  max-height: 94vh;
   width: 700px;
   overflow-y: scroll;
+  z-index: 900;
   border-radius: 10px;
   flex-direction: column;
   align-items: center;
@@ -32,20 +33,25 @@
   border-radius: 8px;
 }
 .amenity {
-  background-color: #b7b5b3;
+  /* background-color: #b7b5b3;
+   */
+  width: 140px;
+  border-radius: 28px;
+  padding: 6px;
+  border: 2px solid #453f78;
 }
 .amenity:hover {
-  background-color: #a6a3a0;
+  background-color: #bfbcdc;
 }
 .amenities {
   display: flex;
-  width: 400px;
+  width: 450px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
 .clear-selections {
-  width: 100%;
+  width: 90%;
   background-color: #ed474a;
 }
 
