--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,37 +3,34 @@
   top: 0;
   right: 0;
   left: 0;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #161712;
-  z-index: 300;
+  /* z-index: 300; */
 }
 
 nav {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  /* align-items: flex-start; */
-  padding-top: 33px;
-  margin-bottom: 40px;
-  font-size: 14px;
-  /* position: sticky; */
-  max-width: 3000px;
-  /* top: 0;
-  right: 0;
-  left: 0; */
-  /* height: 175px; */
+  padding: 40px 40px;
+  font-size: 16px;
+  max-width: 1800px;
+  min-width: 90%;
+  width: 90%;
   background-color: #161712;
-  z-index: 1;
+  z-index: 10;
 }
 .main-links {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 400px;
-  margin-right: 60px;
+  justify-content: space-around;
+  margin: auto;
+  /* width: 400px; */
+  /* margin-right: 60px; */
 }
 nav > a,
 .main-links > a,
@@ -41,7 +38,8 @@ nav > span {
   color: #e5e7e6;
   text-decoration: none;
   padding: 5px;
-  margin: 0px 30px;
+  margin: auto;
+  /* margin: 0px 30px; */
   font-size: 16px;
 }
 nav > a:hover,
@@ -55,9 +53,9 @@ nav > a:hover,
   background-color: #e5e7e6;
   border-radius: 40px;
   height: 45px;
-  width: 160px;
-  margin-top: -10px;
-  margin-right: 10px;
+  width: fit-content;
+  margin: auto;
+  /* margin-right: -450px; */
 }
 .nav-btn > button {
   height: 45px;
@@ -85,7 +83,7 @@ nav > button {
   font-size: 28px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   border: #161712;
 }
 
@@ -153,9 +151,74 @@ nav > button {
 .logo-container {
   width: 50px;
   height: 50px;
-  margin-top: -10px;
-  margin-left: 40px;
+  margin: auto;
+  /* margin-top: -10px; */
+  /* margin-left: 40px; */
 }
 .logo-container > a:active {
   text-decoration: none;
+}
+.account-drop-btn {
+  height: 45px;
+  width: 80px;
+  /* letter-spacing: 10px; */
+  font-size: 28px;
+  border-radius: 40px;
+  padding-left: 6px;
+  color: #161712;
+  font-weight: bolder;
+  background-color: #e5e7e6;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  text-align: center;
+}
+.account-drop-btn:hover {
+  color: #000;
+}
+.drop-menu {
+  position: absolute;
+  top: 90px;
+  right: 5.25%;
+  /* z-index: 400; */
+  border-radius: 8px;
+  background-color: #e5e7e6;
+  /* border: 1px solid #161712; */
+  box-shadow: 2px 2px 10px #161712;
+  width: 150px;
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 4px;
+}
+.account-link {
+  width: 100%;
+  height: 33%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: inherit;
+  /* padding: 4px; */
+
+  color: #161712;
+}
+.account-link > button {
+  border: none;
+  background-color: inherit;
+  font-size: inherit;
+  width: 100%;
+}
+.account-link > a {
+  color: #161712;
+}
+.account-link:hover {
+  background-color: #b7b5b3;
+}
+.fa-user-circle,
+.fa-bars {
+  margin: 4px;
 }
