--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,66 @@
 /* TODO Add site wide styles */
 * {
-  box-sizing: border-box;
-  font-family: "Roboto";
-  margin: 0;
+	box-sizing: border-box;
+	font-family: "Roboto";
+	margin: 0;
 }
 
 #root {
-  position: relative;
-  min-height: 100vh;
-  padding-bottom: 180px;
-  background-color: #e5e7e6;
+	position: relative;
+	min-height: 100vh;
+	padding-bottom: 180px;
+	background-color: #e5e7e6;
+}
+
+#text {
+	font-size: 100px;
+}
+
+@media screen and (max-width: 500px) {
+	nav {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 20px 0;
+		border-bottom: none;
+	}
+	div.image-text {
+		font-size: 24px;
+	}
+
+	div.main-image {
+		width: 100%;
+		border-radius: 0px;
+	}
+
+	div.locations {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-evenly;
+		margin-top: -60px;
+	}
+
+	div.locations > div.location-container {
+		width: 80%;
+		margin: 18px 0px;
+	}
+
+	div.techs {
+		display: flex;
+		flex-wrap: wrap;
+		width: 78%;
+		margin: 0;
+	}
+
+	div.footer {
+		height: fit-content;
+		padding-top: 5px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin: 0;
+	}
 }
