--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -130,7 +130,7 @@ nav > button {
   background-color: rgb(76, 63, 145);
 } */
 
-.account-btn {
+/* .account-btn {
 	height: 45px;
 	width: 80px;
 	border-radius: 40px;
@@ -146,7 +146,7 @@ nav > button {
 	background-color: #b7b5b3;
 	color: #000;
 	box-shadow: rgb(0 0 0 / 15%) 0px 16px 32px, rgb(0 0 0 / 10%) 0px 3px 8px !important;
-}
+} */
 
 .logo-container {
 	width: 50px;
@@ -176,7 +176,7 @@ nav > button {
 	text-align: center;
 }
 .account-drop-btn:hover {
-	color: #000;
+	cursor: pointer;
 }
 .drop-menu {
 	position: absolute;
@@ -195,13 +195,16 @@ nav > button {
 	align-items: center;
 	padding: 4px;
 }
-.account-link {
+
+.account-link,
+.drop-menu > button {
 	width: 100%;
 	height: 33%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	border-radius: inherit;
+	border: none;
 	/* padding: 4px; */
 
 	color: #161712;
